Making run one line.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,26 +1,20 @@
 #FROM resin/raspberrypi3-python:3.6-slim
 FROM linusmotu/rpi-jupyter:datascience1.3
 
-WORKDIR /root
-
-#RUN apt-get update
-RUN pip3 install --upgrade pip
-RUN pip3 install setuptools
-
 # for flask web server
 EXPOSE 8081
+
+WORKDIR /root
 
 # set working directory
 ADD . /app
 WORKDIR /app
 
-# install required libraries
-RUN pip3 install -r requirements.txt
+RUN pip3 install --upgrade pip && \
+    pip3 install setuptools && \
+    pip3 install -r requirements.txt && \
+    echo $(ls -1 /app)
 
-# This is the runtime command for the container
-RUN echo $(ls -1 /app)
-#CMD ["python", "-u", "app.py"]
-#CMD python -u app.py
 CMD python3 -u app.py
 
 
